# dire

./: Cargo.toml  README.md
crates/dire-bench/: Cargo.toml  README.md
crates/dire-bench/data/lubm/0/: abox.ntenc  tbox.ntenc
crates/dire-bench/src/: main.rs
crates/dire-engine/: Cargo.toml  README.md
crates/dire-engine/src/: entrypoint.rs  lib.rs  reason.rs
crates/dire-engine/src/materialization/: common.rs  mod.rs  owl2rl.rs  rdfs.rs  rdfspp.rs
crates/dire-engine/src/model/: consts.rs  types.rs
crates/dire-parser/: Cargo.toml
crates/dire-parser/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: entrypoint.rs  lib.rs  types.rs
crates/engine/src/materialization/: common.rs  mod.rs  rdfs.rs  rdfspp.rs
crates/engine/src/model/: mod.rs  types.rs
data/: .gitignore
data/lubm/: .gitignore
src/: main.rs
src/ui/: app.rs  event.rs  handler.rs  input.rs  mod.rs  ui.rs
